add some js code

--- a/index.html
+++ b/index.html
@@ -11,21 +11,21 @@
         <div id="window">
             <img id="gameBackground" src="animations/bkg_1.gif" alt="">
             <div id="character">
-                <img id="characterImg" src="animations/chr_1.gif" alt="">
+                <img id="characterImg" src="animations/chr_2.gif" alt="">
             </div>
             <div id="trap">
-                <img id="trapImg" src="animations/trap_3.gif">
+                <img id="trapImg" src="animations/trap_2.gif">
             </div>
         </div>
 
         <div id="items">
             <div id="score">
                 <img id="scoreBackground" src="images/pic_4-removebg-preview.png">
-                <div id="scoreNumber"><i>99  </i></div>
+                <div id="scoreNumber"><i id="scn">0</i></div>
             </div>
 
             <div id="jumpButton">
-                <button class="button-49" role="button">JUMP</button>
+                <button class="button-49" onclick="jump()" role="button">JUMP</button>
             </div>
         </div>
 
