--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <div id="game">
 
+
         <div id="window">
             <img id="gameBackground" src="animations/bkg_1.gif" alt="">
             <div id="character">
@@ -29,7 +30,11 @@
             </div>
         </div>
 
+        <audio id="playingMusic" src="musics/TunePocket-Its-My-Yard-7-Sec-Intro-Preview.mp3" autoplay loop></audio>
 
+        <!--<audio controls autoplay loop>
+            <source src="musics/airtone_-_sleepwalking.mp3" type="audio/mpeg">
+        </audio>-->
     </div>
     <script src="app_1.js"></script>
 </body>
